kubernetes/argocd/pull_request_generator/manifests/gateway/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: istio-waypoint
  labels:
    app.kubernetes.io/name: istio-waypoint
    app.kubernetes.io/part-of: pull-request-generator-demo
