kubernetes/argocd/pull_request_generator/manifests/gateway/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: waypoint
  namespace: istio-waypoint
  labels:
    app.kubernetes.io/name: waypoint
    app.kubernetes.io/part-of: pull-request-generator-demo
    istio.io/waypoint-for: service
spec:
  gatewayClassName: istio-waypoint
  listeners:
    - name: mesh
      port: 15008
      protocol: HBONE
      allowedRoutes:
        namespaces:
          from: All
